# switch-parental-controls

./: .gitignore  .markdownlint.json  .mise.toml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mise.toml  opencode.jsonc.example  pyproject.toml  release-please-config.json  renovate.json
.github/: renovate.json
.github/workflows/: automerge-schedule.yml  publish.yml  release-please.yml  test.yml
skills/switch-parental-controls/: SKILL.md
skills/switch-parental-controls/evals/: evals.json
src/nintendo_mcp/: __init__.py  __main__.py  applications.py  auth.py  devices.py  models.py  players.py  server.py  utils.py
src/switch_parental_controls/: __main__.py  applications.py  auth.py  cli.py  client.py  credentials.py  data_cache.py  device_cache.py  devices.py  models.py  players.py  server.py  utils.py
tests/: conftest.py  test_applications.py  test_auth.py  test_cli.py  test_data_cache.py  test_device_cache.py  test_devices.py  test_integration.py  test_players.py
